<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>op3_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="614610440@qq.com">wxx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>op3_action_module_msgs</depend>
  <depend>op3_walking_module_msgs</depend>
  <depend>op3_online_walking_module_msgs</depend>
  <depend>op3_tuning_module_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_math</depend>
  <depend>op3_kinematics_dynamics</depend>
  <depend>op3_balance_control</depend>
  <depend>open_cr_module</depend>
  <depend>op3_base_module</depend>
  <depend>op3_head_control_module</depend>
  <depend>op3_walking_module</depend>
  <depend>op3_action_module</depend>
  <depend>op3_direct_control_module</depend>
  <depend>op3_online_walking_module</depend>
  <depend>op3_tuning_module</depend>
  <depend>hand_regulator_module</depend>
  <depend>Boost</depend>
  <depend>PkgConfig</depend>
  <depend>yaml-cpp</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
